<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/caption"
            android:layout_width="398dp"
            android:layout_height="6dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            />

        <ImageView
            android:id="@+id/profile_background_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/caption" />

        <TextView
            android:id="@+id/profileNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_background_image" />

        <EditText
            android:id="@+id/editProfileNickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="ニックネームを入力してください。"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profileNickname"
            app:layout_constraintTop_toBottomOf="@+id/profile_background_image" />

        <ImageView
            android:id="@+id/editProfileView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfileNickname"
            android:background="@color/colorPrimaryDark"
            android:clickable="true"/>

        <EditText
            android:id="@+id/editComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/editComment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfileView" />

        <TextView
            android:id="@+id/editGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editComment" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/editGender"
            app:layout_constraintTop_toBottomOf="@+id/editComment">

            <RadioButton
                android:id="@+id/radioButton_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioButton_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radioButton_gender_private"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender_private" />
        </RadioGroup>

        <TextView
            android:id="@+id/profileAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/age"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editGender" />

        <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
            android:id="@+id/seekBarAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:dsb_max="100"
            app:dsb_min="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/profileAge"
            app:layout_constraintEnd_toStartOf="@+id/editAge"
            app:layout_constraintTop_toBottomOf="@+id/editGender" />

        <TextView
            android:id="@+id/editAge"
            android:layout_width="94dp"
            android:layout_height="18dp"
            android:layout_marginTop="50dp"
            android:text="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seekBarAge"
            app:layout_constraintTop_toBottomOf="@+id/editGender" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btnResidentialArea"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@+id/profileAge">

            <TextView
                android:id="@+id/residentialArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/residentialArea"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/editResidentialArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_set"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/residentialArea"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/btnAddProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:text="プロフィールに追加"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnResidentialArea" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>